src/test/ui/parser/issue-33455.stderr
error: expected one of `::`, `;`, or `as`, found `.`
  --> $DIR/issue-33455.rs:1:8
   |
LL | use foo.bar;
   |        ^ expected one of `::`, `;`, or `as` here

error: aborting due to previous error

