src/test/ui/parser/issue-33455.rs
// compile-flags: -Z parse-only

use foo.bar; //~ ERROR expected one of `::`, `;`, or `as`, found `.`
